--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -13,15 +13,16 @@
 
 		<link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
 
- <!-- Google tag (gtag.js) -->
- <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
- <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag() { dataLayer.push(arguments); }
-   gtag('js', new Date());
+		 <!-- Google tag (gtag.js) -->
+		 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
+		 <script>
+		   window.dataLayer = window.dataLayer || [];
+		   function gtag() { dataLayer.push(arguments); }
+		   gtag('js', new Date());
+	   
+		   gtag('config', 'G-F0V5C760K4');
+		 </script>
 
-   gtag('config', 'G-F0V5C760K4');
- </script>
 
 	</head>
 	<body class="reveal-viewport theme-font-palatino theme-color-black-blue">
@@ -121,7 +122,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 1px; top: 114.001px;" data-block-id="57fa7f87e261e2876b8001590c9fd900" data-name="math-92fd70"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 17; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">y = r \cos v</div></div></div>
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 0px; top: 156.001px;" data-block-id="46ea0c52169964a8166e7cb42e6b32f8" data-name="math-1bd8e2"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 18; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">z = a \left(u \cos s - h \sin s\right)</div></div></div>
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 19px; top: 211.001px;" data-block-id="1c371847e088530e2a323eb12aa2b252" data-name="math-6c2374"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 19; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">0\leq u \leq \pi</div></div></div>
-<div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 19px; top: 255.001px;" data-block-id="ac5ececb4f8480241b56ce3b0485a16f" data-name="math-de5b10"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 20; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">0\leq v \leq 17 \pi</div></div></div></section></section><section class="stack" data-id="2bfdf332aa3aaddaf753e29048d3178e"><section data-background-color="rgb(0, 0, 0)" data-id="e3fb24adc071eb72b9006fd2bd639a2d"><div class="sl-block" data-block-type="text" style="width: 806px; left: 237px; top: 199px; height: auto;" data-block-id="565adff2e1e8d719fee5f1129c42b3f7"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10; color: rgb(255, 255, 255);"><h1>Hyperboloic surfaces</h1></div></div>
+<div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 19px; top: 255.001px;" data-block-id="ac5ececb4f8480241b56ce3b0485a16f" data-name="math-de5b10"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 20; font-size: 55%; color: rgb(243, 243, 243);"><div class="math-input">0\leq v \leq 17 \pi</div></div></div></section></section><section class="stack" data-id="2bfdf332aa3aaddaf753e29048d3178e"><section data-background-color="rgb(0, 0, 0)" data-id="e3fb24adc071eb72b9006fd2bd639a2d"><div class="sl-block" data-block-type="text" style="width: 806px; left: 237px; top: 199px; height: auto;" data-block-id="565adff2e1e8d719fee5f1129c42b3f7"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10; color: rgb(255, 255, 255);"><h1>Hyperbolic surfaces</h1></div></div>
 <div class="sl-block" data-block-type="shape" style="width: 55px; height: 55px; left: 612.5px; top: 585px;" data-name="shape-827828" data-block-id="a712dc74881914b4af688c9b6046ccf7"><div class="sl-block-style" style="z-index: 11; opacity: 0.51;"><div class="sl-block-content" data-shape-type="symbol-thin-arrow-down" data-shape-fill-color="rgb(238, 238, 238)" data-shape-stretch="true" style="z-index: 11; transition-duration: 0.6s; transition-delay: 1s;" data-animation-type="slide-down"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" preserveaspectratio="none" viewbox="4.000251770019531 1.9999980926513672 23.999500274658203 27.999752044677734"><g class="shape-element" fill="rgb(238, 238, 238)" data-viewbox="4.000251770019531 1.9999980926513672 23.999500274658203 27.999752044677734"><path d="M4.586 19.414l10 10c0.781 0.781 2.047 0.781 2.828 0l10-10c0.781-0.781 0.781-2.047 0-2.828s-2.047-0.781-2.828 0l-6.586 6.586v-19.172c0-1.105-0.895-2-2-2s-2 0.895-2 2v19.172l-6.586-6.586c-0.391-0.39-0.902-0.586-1.414-0.586s-1.024 0.195-1.414 0.586c-0.781 0.781-0.781 2.047 0 2.828z"></path></g></svg></div></div></div></section><section data-background-color="#000000" data-background-iframe="https://vector-calculus.github.io/applets/threejs/parametric-surfaces-gallery/hyperspiral.html" data-background-interactive="true" data-id="b88ea2b2cebe1a6d9eebf44981c84728"><div class="sl-block" data-block-type="text" style="width: 320.086px; left: -0.0862999px; top: 0px; height: auto;" data-block-id="9bcb79bce5c6c606098eed990c26c4aa"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Title Text" style="text-align: left; z-index: 10; color: rgb(243, 243, 243);"><h2>Hyperbolic spirale</h2></div></div>
 
 
@@ -246,7 +247,7 @@ y= b \sin u, (\pi\lt u \leq 2\pi)
 		</div>
 
 		<script>
-			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1741845414","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":26,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1741845763017,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
+			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1741845414","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":26,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1741846068382,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
 
 
 			// Use local fonts
