--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -512,11 +512,11 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 
 <p> </p>
 
-<p><span style="font-size:1.0em"><span style="color:rgb(238, 238, 238); text-align:left">Info <a href="https://vector-calculus.github.io/integrals-over-paths-and-surfaces.html#section-4" target="_blank">Vector Calculus </a></span><a href="https://vector-calculus.github.io/integrals-over-paths-and-surfaces.html#section-3" target="_blank"><span style="color:rgb(238, 238, 238)">🔗</span></a></span></p>
+<p><span style="font-size:1.0em"><span style="color:rgb(238, 238, 238); text-align:left">ℹ <a href="https://vector-calculus.github.io/integrals-over-paths-and-surfaces.html#section-4" target="_blank">Vector Calculus </a></span><a href="https://vector-calculus.github.io/integrals-over-paths-and-surfaces.html#section-3" target="_blank"><span style="color:rgb(238, 238, 238)">🔗</span></a></span></p>
 
-<p><span style="font-size:1.0em">Support<span style="color:rgb(238, 238, 238)"> <a href="https://www.patreon.com/jcponce" target="_blank">Patreon  </a></span><a href="https://www.patreon.com/jcponce" target="_blank"><span style="color:rgb(238, 238, 238)">🔗</span></a></span></p>
+<p><span style="font-size:1.0em"><span style="color:rgb(238, 238, 238)">❤️ <a href="https://www.patreon.com/jcponce" target="_blank">Patreon  </a></span><a href="https://www.patreon.com/jcponce" target="_blank"><span style="color:rgb(238, 238, 238)">🔗</span></a></span></p>
 
-<p><span style="font-size:1.0em"><span style="color:rgb(238, 238, 238)">Twitter <a href="https://x.com/jcponcemath" target="_blank">@jcponcemath</a></span></span></p>
+<p><span style="font-size:1.0em"><span style="color:rgb(238, 238, 238)">🐦 <a href="https://x.com/jcponcemath" target="_blank">@jcponcemath</a></span></span></p>
 
 <p> </p>
 
@@ -529,7 +529,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 		</div>
 
 		<script>
-			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1741845414","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":37,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1741943891161,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
+			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1741845414","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":37,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1741949125385,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
 
 
 			// Use local fonts
