fixed rose shape

--- a/applets/threejs/parametric-surfaces-gallery/torusknot.html
+++ b/applets/threejs/parametric-surfaces-gallery/torusknot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pinecone Surface</title>
+  <title>Torus with knot inside Surface</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -18,6 +18,6 @@
     }
   }
   </script>
-  <script type="module" src="./js/pineconeMain.js"></script>
+  <script type="module" src="./js/torusknotMain.js"></script>
 </body>
 </html>
