--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1562,11 +1562,9 @@
       <div style="text-align: center;">
         <iframe loading="lazy" width="100%" height="540px" noscrolling="" style="border: 0px solid black; overflow: hidden; margin-top: 10px;" src="applets/threejs/parametric-surfaces-preview"></iframe>
         <br>
-        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="http://www.3d-meier.de/tut3/Seite0.html" target="_blank">
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" 
+          href="https://vector-calculus.github.io/parametric-surfaces-gallery/" target="_blank">
           Parametric Surfaces and Solids <i class="fas fa-external-link-alt"></i>
-        </a>
-        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://codepen.io/wakana-k/full/poBBRmN" target="_blank">
-          Source code: Wakana Y.K. <i class="fas fa-external-link-alt"></i>
         </a>
       </div>
 
