--- a/applets/threejs/3d-surfaces/index.html
+++ b/applets/threejs/3d-surfaces/index.html
@@ -4,24 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go Live</title>
+    <title>Surfaces space</title>
     <link rel="stylesheet" href="./style.css">
 </head>
- 
 
 <body>
     <canvas class="webgl"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     
-    <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.18"></script>
     <!-- using three.js -->
     <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
         crossorigin="anonymous"></script>
     <script type="importmap">
   {
     "imports": {      
-      "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+      "three": "https://unpkg.com/three@0.174.0/build/three.module.js",
+      "three/addons/": "https://unpkg.com/three@0.174.0/examples/jsm/"
     }
   }
 </script>
