--- a/applets/threejs/3d-surfaces/index.html
+++ b/applets/threejs/3d-surfaces/index.html
@@ -23,7 +23,7 @@
     }
   }
 </script>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./script-v2.js"></script>
 </body>
 
 </html>
