--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -13,15 +13,18 @@
 
 		<link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
 
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag() { dataLayer.push(arguments); }
-		  gtag('js', new Date());
-	  
-		  gtag('config', 'G-F0V5C760K4');
-		</script>
+		<link rel="icon" type="image/png" href="imgs/infinity32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="imgs/infinity16.png" sizes="16x16">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-F0V5C760K4');
+  </script>
 
 
 
@@ -32,8 +35,8 @@
 				<section data-id="979da78088c4f76a2aaeff3b2b726406" data-background-color="rgb(0, 0, 0)"><div class="sl-block" data-block-type="text" style="width: 1120px; left: 80px; top: 216px; height: auto;" data-block-id="46b11a27e629d26eacde6a8eb58ddcfa"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10; transition-duration: 2s; transition-delay: 1s; font-size: 132%; color: rgb(254, 254, 254);" data-animation-type="slide-down"><h1>Welcome to the Gallery</h1></div></div>
 
 <div class="sl-block" data-block-type="text" style="height: auto; width: 447px; left: 416.5px; top: 648px;" data-name="text-2c9d99" data-block-id="e0f431ccff6bade5af9f4891e3593b1a"><div class="sl-block-style" style="z-index: 11; opacity: 0.88;"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 11; color: rgb(222, 222, 222); transition-duration: 1s; transition-delay: 3s; font-size: 80%;" data-animation-type="slide-up"><p>Use arrows <code><strong>&lt; &gt;</strong></code> to navigate!</p></div></div></div>
-<div class="sl-block" data-block-type="image" style="width: 50.3915px; height: 58.6157px; left: 614.804px; top: 402.692px; min-width: 1px; min-height: 1px;" data-name="image-dac5f1" data-block-id="daf15a95d4a17586bc76a94a30cb63b7"><div class="sl-block-style" style="z-index: 12; opacity: 0.82;"><div class="sl-block-content" style="z-index: 12; transition-duration: 1s; transition-delay: 2s;" data-animation-type="fade-in"><img class="" data-natural-width="337" data-natural-height="392" data-lazy-loaded="" data-src="parametric-surfaces-gallery/9d282b3fd42a3946c3b5146817906c2e.png"></div></div></div></section><section data-id="4a254a862d423e4d6cce8a18d967b2f6" data-background-iframe="https://vector-calculus.github.io/applets/threejs/3d-surfaces/" data-background-color="rgb(0, 0, 0)">
-</section><section data-background-color="rgb(0, 0, 0)" data-id="7b02a92e01515b0b744468215c60d555">
+<div class="sl-block" data-block-type="image" style="width: 50.3915px; height: 58.6157px; left: 614.804px; top: 402.692px; min-width: 1px; min-height: 1px;" data-name="image-dac5f1" data-block-id="daf15a95d4a17586bc76a94a30cb63b7"><div class="sl-block-style" style="z-index: 12; opacity: 0.82;"><div class="sl-block-content" style="z-index: 12; transition-duration: 1s; transition-delay: 2s;" data-animation-type="fade-in"><img class="" data-natural-width="337" data-natural-height="392" data-lazy-loaded="" data-src="parametric-surfaces-gallery/9d282b3fd42a3946c3b5146817906c2e.png"></div></div></div></section><section data-id="4a254a862d423e4d6cce8a18d967b2f6" data-background-iframe="https://vector-calculus.github.io/applets/threejs/3d-surfaces/" data-background-color="rgb(0, 0, 0)" id="surfaces-space">
+</section><section data-background-color="rgb(0, 0, 0)" data-id="7b02a92e01515b0b744468215c60d555" id="toc">
 
 <div class="sl-block" data-block-type="text" style="height: auto; width: 600px; left: 340px; top: 0px;" data-name="text-0ed877" data-block-id="a3c3738b2a5af8ac8eb7834dbef98dec"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 10; transition-duration: 0.6s; font-size: 90%; color: rgb(254, 254, 254);" data-animation-type="fade-in"><h2>Table of Contents</h2></div></div>
 <div class="sl-block" data-block-type="text" style="height: auto; width: 160px; left: 141.643px; top: 79.5743px;" data-name="text-cda73b" data-block-id="39a60adf9cfc5df1aedafe00fa53491e"><a class="sl-block-style" style="z-index: 11;" href="#/3/1"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 11; transition-duration: 0.6s;" data-animation-type="fade-in"><p style="text-align: left;">- Plane</p></div></a></div>
@@ -660,7 +663,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 <div class="sl-block" data-block-type="shape" style="width: 28.5389px; height: 4.89568px; left: 4.97535px; top: 32.5522px;" data-name="shape-534d30" data-origin-id="0939201e3aa07c2b42f15c12e8010860" data-block-id="0cc5efca960f5cfd92f033ec2bf99228"><a class="sl-block-content" data-shape-type="rect" data-shape-fill-color="#2f90f8" data-shape-stretch="true" style="z-index: 19;" href="#/2"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" preserveaspectratio="none" viewbox="0 0 29 5"><rect width="28.5389" height="4.89568" rx="0" ry="0" class="shape-element" fill="#2f90f8"></rect></svg></a></div>
 <div class="sl-block" data-block-type="shape" style="width: 28.5389px; height: 4.12823px; left: 4.97535px; top: 40.8085px;" data-name="shape-d9bd50" data-origin-id="c6856c42914e6671c5772ceb8e756520" data-block-id="563c4bc46a407fd36e1557c25397b162"><a class="sl-block-content" data-shape-type="rect" data-shape-fill-color="#2f90f8" data-shape-stretch="true" style="z-index: 20;" href="#/2"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" preserveaspectratio="none" viewbox="0 0 29 4"><rect width="28.5389" height="4.12823" rx="0" ry="0" class="shape-element" fill="#2f90f8"></rect></svg></a></div>
 </div></div></div>
-<div class="sl-block" data-block-type="text" style="height: auto; width: 93.5px; left: 44.5px; top: 68.4479px;" data-name="text-226b8d" data-block-id="3d64a24fbe3775a457bcb72124854f0f"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 21;"><p>Torus</p></div></div></section></section><section data-background-color="rgb(0, 0, 0)" data-id="c0a5139b83ac7c0c8fd09cb1e71c35f7" data-background-iframe="https://vector-calculus.github.io/applets/threejs/rings-rotating"><div class="sl-block" data-block-type="text" style="width: 230px; left: 0px; top: 298.5px; height: auto;" data-block-id="eb9ac375234c13a6e924e95642f9772b"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10; color: rgb(238, 238, 238); font-size: 67%; line-height: 1.027;" data-has-line-height="">
+<div class="sl-block" data-block-type="text" style="height: auto; width: 93.5px; left: 44.5px; top: 68.4479px;" data-name="text-226b8d" data-block-id="3d64a24fbe3775a457bcb72124854f0f"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 21;"><p>Torus</p></div></div></section></section><section data-background-color="rgb(0, 0, 0)" data-id="c0a5139b83ac7c0c8fd09cb1e71c35f7" data-background-iframe="https://vector-calculus.github.io/applets/threejs/rings-rotating" id="links"><div class="sl-block" data-block-type="text" style="width: 230px; left: 0px; top: 298.5px; height: auto;" data-block-id="eb9ac375234c13a6e924e95642f9772b"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text" style="z-index: 10; color: rgb(238, 238, 238); font-size: 67%; line-height: 1.027;" data-has-line-height="">
 <p><span style="font-size:1.0em"><span style="color:rgb(238, 238, 238)">Made with </span><a href="https://threejs.org/" target="_blank">Three.js</a></span></p>
 
 <p> </p>
@@ -682,7 +685,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 		</div>
 
 		<script>
-			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1742091247","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":43,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1742091371601,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
+			var SLConfig = {"deck": {"id":3366233,"slug":"parametric-surfaces-gallery","title":"Parametric Surfaces - Gallery","description":"","width":1280,"height":720,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/708585739671947d21837a28d112cd8e/thumb.jpg?1742091247","view_count":0,"user":{"id":1304482,"username":"jcponce","name":"Juan Carlos Ponce Campuzano","description":"Independent Mathematics Educator","thumbnail_url":"https://media.slid.es/avatars/1304482/bw-b-logo-twitter-geogebra_copy.jpg","account_type":"lite","team_id":null,"settings":{"id":5182188,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"fade","transition":"fade","theme_id":null,"theme_font":"palatino","theme_color":"black-blue","auto_slide_interval":0,"comments_enabled":false,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":43,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":1,"data_updated_at":1742091583803,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"language":"en","notes":{}}};
 
 
 			// Use local fonts
