--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -105,7 +105,7 @@ z=h\\
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 0px; top: 450px;" data-name="math-17672b" data-block-id="9df1ddafd29e52bfe339a4738c242101"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 11; font-size: 70%; color: rgb(243, 243, 243);"><div class="math-input">\begin{array}{l}
 x = r\cos u \sin v\\
 y = r\sin u \sin v\\
-z = r\cos u\\
+z = r\cos v\\
 \end{array}</div></div></div>
 
 <div class="sl-block" data-block-type="math" style="width: auto; height: auto; left: 34px; top: 588.229px;" data-name="math-bd75c7" data-block-id="7aa1a34badbbb076c8ca07bcfdecb94f"><div class="sl-block-content notranslate" data-math-display="true" style="z-index: 12; color: rgb(243, 243, 243); font-size: 70%;"><div class="math-input">0\leq u \leq 2\pi</div></div></div>
