--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1560,12 +1560,12 @@
       </p>
 
       <div style="text-align: center;">
-        <iframe loading="lazy" width="100%" height="540px" noscrolling="" style="border: 0px solid black; overflow: hidden; margin-top: 10px;" src="applets/threejs/parametric-surfaces-preview"></iframe>
+        <iframe loading="lazy" width="100%" height="245px" noscrolling="" style="border: 0px solid black; overflow: hidden; margin-top: 10px;" src="applets/threejs/parametric-surfaces-preview"></iframe>
         <br>
-        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" 
-          href="https://vector-calculus.github.io/parametric-surfaces-gallery/" target="_blank">
-          Parametric Surfaces and Solids <i class="fas fa-external-link-alt"></i>
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://vector-calculus.github.io/parametric-surfaces-gallery/" target="_blank">
+          Gallery <i class="fas fa-external-link-alt"></i>
         </a>
+        
       </div>
 
 
