--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -682,6 +682,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 	<p><span><a href="https://mathworld.wolfram.com/topics/MiscellaneousSurfaces.html" target="_blank">Miscellaneous Surfaces</a>. </span>Wolfram Research, Inc.</p>
 	</li>
 	<li>Paul Bourke. <a href="https://paulbourke.net/geometry/" target="_blank">Geometry, Surfaces, Curves, Polyhedra</a>.</li>
+	<li>Paul Nylander. <a href="http://www.bugman123.com/index.html" target="_blank">www.bugman123.com</a></li>
 	<li>
 <a href="https://mathworld.wolfram.com/topics/RuledSurfaces.html" target="_blank">Ruled Surfaces</a>. Wolfram Research, Inc.</li>
 	<li>S.N. Krivoshapko &amp; V.N. Ivanov. (2015). <a href="https://link.springer.com/book/10.1007/978-3-319-11773-7" target="_blank">Encyclopedia of Analytical Surfaces</a>. Springer Verlag.</li>
