--- a/parametric-surfaces-gallery/index.html
+++ b/parametric-surfaces-gallery/index.html
@@ -1113,7 +1113,7 @@ z = 1 - \exp\left(\displaystyle  \frac{u}{a}\right) - \sin v + \exp\left( \displ
 
 				hash: true,
 				controls: true,
-				progress: true,
+				progress: false,
 				mouseWheel: false,
 				showNotes: false,
 				slideNumber: false,
