new surfaces and updates

--- a/applets/threejs/parametric-surfaces-gallery/spiralwaves.html
+++ b/applets/threejs/parametric-surfaces-gallery/spiralwaves.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cosine Surface</title>
+  <title>Spiral Waves Surface</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -18,6 +18,6 @@
         }
       }
   </script>
-  <script type="module" src="./js/cosineMain.js"></script>
+  <script type="module" src="./js/spiralwavesMain.js"></script>
 </body>
 </html>
