--- a/applets/threejs/parametric-surfaces-gallery/goblet.html
+++ b/applets/threejs/parametric-surfaces-gallery/goblet.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cosine Surface</title>
+  <title>Goblet Surface</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <canvas class="webgl"></canvas>
   <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
@@ -18,6 +20,8 @@
         }
       }
   </script>
-  <script type="module" src="./js/cosineMain.js"></script>
+
+  <script type="module" src="./js/gobletMain.js"></script>
 </body>
+
 </html>
