--- a/applets/threejs/parametric-surfaces-gallery/catenoid.html
+++ b/applets/threejs/parametric-surfaces-gallery/catenoid.html
@@ -18,6 +18,6 @@
     }
   }
   </script>
-  <script type="module" src="./js/hypercatenoidMain.js"></script>
+  <script type="module" src="./js/catenoidMain.js"></script>
 </body>
 </html>
