--- a/applets/threejs/parametric-surfaces-gallery/knottranguloidtrefoil.html
+++ b/applets/threejs/parametric-surfaces-gallery/knottranguloidtrefoil.html
@@ -11,12 +11,12 @@
   <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"
     crossorigin="anonymous"></script>
   <script type="importmap">
-  {
-    "imports": {      
-      "three": "https://unpkg.com/three@0.174.0/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@0.174.0/examples/jsm/"
-    }
-  }
+      {
+        "imports": {
+          "three": "../threejs-source/build/three.module.min.js",
+          "three/addons/": "../threejs-source/examples/jsm/"
+        }
+      }
   </script>
   <script type="module" src="./js/knotTranguloidTrefoilMain.js"></script>
 </body>
