--- a/applets/threejs/bianchi-pinkall-flat-tori/index.html
+++ b/applets/threejs/bianchi-pinkall-flat-tori/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surfaces space</title>
+    <title>Bianchi Pinkall flat tori</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -23,7 +23,7 @@
             }
           }
     </script>
-    <script type="module" src="./script-v2.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 
 </html>
