--- a/applets/threejs/gravity/index.html
+++ b/applets/threejs/gravity/index.html
@@ -12,11 +12,20 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.module.min.js",
-        "jsm/": "https://cdn.jsdelivr.net/npm/three@0.174.0/examples/jsm/"
+        "three": "../threejs-source/build/three.module.min.js",
+        "three/addons/": "../threejs-source/examples/jsm/"
       }
     }
   </script>
+
+  <!-- <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.module.min.js",
+        "jsm/": "https://cdn.jsdelivr.net/npm/three@0.174.0/examples/jsm/"
+      }
+    } 
+  </script> -->
 
 </head>
 
