--- a/applets/threejs/solids/index.html
+++ b/applets/threejs/solids/index.html
@@ -15,10 +15,10 @@
 
 		<script type="importmap">
 			{
-				"imports": {
-					"three": "https://cdn.jsdelivr.net/npm/three@v0.173.0/build/three.module.js",
-					"three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.173.0/examples/jsm/"
-				}
+			  "imports": {
+				"three": "../threejs-source/build/three.module.min.js",
+				"three/addons/": "../threejs-source/examples/jsm/"
+			  }
 			}
 		</script>
 
@@ -30,7 +30,7 @@
 
       		import * as Curves from 'three/addons/curves/CurveExtras.js';
       		import { ParametricGeometry } from 'three/addons/geometries/ParametricGeometry.js';
-			import { ParametricGeometries } from 'three/addons/geometries/ParametricGeometries.js';
+			import { klein } from 'three/addons/geometries/ParametricFunctions.js';
 
 			let camera, orthoCamera, scene, renderer;
 
@@ -126,7 +126,7 @@
 				scene.add( object );
 				*/
 
-				geometry = new ParametricGeometry( ParametricGeometries.klein, 20, 20 );
+				geometry = new ParametricGeometry( klein, 20, 20 );
 				object = new THREE.Mesh( geometry, material );
 				object.position.set( -100, 0, - 200 );
 				object.scale.multiplyScalar( 8 );
