--- a/index.html
+++ b/index.html
@@ -214,13 +214,23 @@
                 It exists thanks to the support of my patrons: <br>
                 <strong>
                     Edward Huff, Abei, pmben, Sophia Wood (Fractal Kitty),
-                    Adam Parrott, Doug Kuhlmann, Dennis Watson, bleh,
-                    Miguel Díaz, Ruan Ramon, Maciej Lasota,
-                    Christopher-Alexander Hermanns, Aarón Reyes,
-                    Gabriela Sofia Marin Sanchez, Jerome Siegler,
-                    Yashar Shoraka, Jeff Butterworth,
-                    Scott Pedersen, Ihsan Karabulut,
-                    Elias Sanchez Angarano, Emanuel Silva.
+                    Adam Parrott,
+                    Doug Kuhlman,
+                    bleh,
+                    Miguel Díaz,
+                    Ruan Ramon,
+                    Maciej Lasota,
+                    Christopher-Alexander Hermanns,
+                    Aarón Reyes,
+                    Jerome Siegler,
+                    Yashar Shoraka,
+                    Shaun MacMillan, 
+                    Scott Pedersen, 
+                    Ihsan Karabulut,
+                    Elias Sanchez Angarano,
+                    Sarah Gelsinger Brewer,
+                    F. Lengyel,
+                    Thomas Smith.
                 </strong>
 
                 <br>
