--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
                     Elias Sanchez Angarano,
                     Sarah Gelsinger Brewer,
                     F. Lengyel,
-                    Thomas Smith.
+                    Thomas Smith,
+                    Chris.
                 </strong>
 
                 <br>
